2007-07-19  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: fix last commit when building without gstreamer

2007-07-15  Jens Granseuer  <jensgr@gmx.net>

	* capplets/Makefile.am:
	* configure.in: don't fail if gstreamer is not available, but simply
	skip the sound capplet (closes bug #456957)

2007-07-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.5.

2007-07-09  Rodrigo Moya <rodrigo@gnome.db.org>

	* configure.in: AC_SUBST(XCURSOR... , needed for themus.

2007-06-24  Gabor Kelemen  <kelemeng@gnome.hu>

	* capplets/accessibility/at-properties/at-enable-dialog.glade: Fix typo in string. 
	(Closes bug #450405).

2007-06-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.4.

2007-06-16  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: add back gnome-theme-installer.desktop.in

2007-06-12  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: revert last commit. gnome-theme-package.xml is
	created by intltool, not autoconf (closes bug #446733)

2007-06-05  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: add capplets/appearance/gnome-theme-package.xml
	to generated files

2007-06-05  Ross Burton  <ross@openedhand.com>

	* configure.in:
	Bump glib requirement to 2.13, for the ~second-accurate timers.

2007-06-05  Ross Burton  <ross@openedhand.com>

	* configure.in:
	Call pkgconfig specifically for the typing break applet.

2007-06-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.3.

2007-06-02  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: don't try to distribute removed files...

2007-05-28  Jens Granseuer  <jensgr@gmx.net>

	* TODO.xml:
	* archiver/*
	* control-center.spec.in:
	* debian/*:
	* idl/*:
	* root-manager/*: remove obsolete files

2007-05-28  Jens Granseuer  <jensgr@gmx.net>

	* configure.in:
	* capplets/Makefile.am: remove fonts, theme, and ui capplets from the build
	and purge some obsolete stuff from configure.in
