@@ -20,7 +20,7 @@ GNOME_DOC_INIT
 m4_define(gnomevfs_minver, 2.0.0)
 m4_define(fontconfig_minver, 1.0.0)
 m4_define(xft_minver, 2.1.2)
-m4_define(gtk_minver, 2.10.0)
+m4_define(gtk_minver, 2.11.6)
 m4_define(libbonobo_minver, 2.0.0)
 m4_define(libgnomeui_minver, 2.2.0)
 m4_define(nautilus_minver, 2.6.0)
