@@ -1,5 +1,10 @@
 2007-07-12  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-desktop.c: Use new GTK+ convenience API for
+	icon view tooltips.  (#455985)
+
+2007-07-12  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-desktop.c: (wp_load_stuffs), (desktop_init),
 	(desktop_shutdown):
 	* appearance-desktop.h:
